--- a/public/views/common_script.html
+++ b/public/views/common_script.html
@@ -1,6 +1,7 @@
-script.
-  var socket = io.connect("https://bitsplit.it:443");
 
+<script>
+  var socket = io.connect("https://bitsplit.it:443");
+  
   socket.on("error", function (json) {
     alertify.error(json.msg, "", 3000);
   });
@@ -28,8 +29,9 @@ script.
   socket.on("chat_message", function (json) {
     add_message_to_chat(json.user_name, json.msg);
   }); 
-
-script.
+  
+</script>
+<script>
   /* Google Analytics */
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -37,18 +39,19 @@ script.
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-47822938-1', 'bitsplit.it');
   ga('send', 'pageview');
-
+  
   /* Snowplow */
   var _snaq = _snaq || [];
-
+  
   _snaq.push(['setCollectorCf', 'd1xeermhwlpt1e']);
   _snaq.push(['setAppId', 'bitsplit.it']);
   _snaq.push(['setCookieDomain', 'bitsplit.it']);
   _snaq.push(['trackPageView']);
-
+  
   (function() {
   var sp = document.createElement('script'); sp.type = 'text/javascript'; sp.async = true; sp.defer = true;
   sp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://d1fc8wv8zag5ca.cloudfront.net/0.13.1/sp.js';
   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(sp, s);
   })();
   /* End Snowplow */
+</script>
