--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -6,18 +6,20 @@ html
     link(rel='stylesheet', href='https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
     script(type='text/javascript', src='https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+
     script(type='text/javascript', src='alertify.js')
     script(src='d3.v3.min.js')
     link(rel='stylesheet', href='main.css')
+    link(rel='stylesheet', href='animate.css')
     link(rel='stylesheet', href='royalslider.css')
     link(rel='stylesheet', href='skins/minimal-white/rs-minimal-white.css')
     link(rel='stylesheet', href='alertify.core.css')
     link(rel='stylesheet', href='alertify.bootstrap.css')
-    link(href='//fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
   body
     // Background
     #bg
-      img(src='images/bg-reduced.jpg', alt='')
+      //img(src='images/bg-reduced.jpg', alt='')
     // Navigation Bar
     #bitsplitnav.navbar.transparent.navbar-fixed-top.navbar-inverse
       .navbar-header
@@ -40,7 +42,7 @@ html
           li.active
             // a#signinbtn(href='#signin', data-toggle='modal', data-target='#signin') Sign In
             a#signinbtn(href='#signin', onclick="temp.login();") Sign In
-    include chat
+    
     block content
     div.overlay-solid
     // Main Screen Slider
@@ -48,14 +50,17 @@ html
       #bitsplitgames.royalSlider.rsMinW
         // Slide 1
         .row
-          .col-md-4.nosidemargin.table-responsive
+
+          .col-md-4.nosidemargin.rsNoDrag.table-responsive
 
             // h4.fadedtext Current Participants
-            ul.nav.nav-pills(style="margin-left:8%;")
+            ul.nav.nav-pills#myTab(style="margin-left:8%;")
               li.active
                 a(href='#home', data-toggle='pill') Current Participants
               li
                 a(href='#profile', data-toggle='pill') Past Winners
+              li
+                a(href='#chat_toggle2', data-toggle='pill') Chat
             .tab-content
               .tab-pane.active#home
                 table#currentbets.table.table-condensed.table-hover.transltable.centered
@@ -81,22 +86,32 @@ html
                       th NEXT JACKPOT
                       th HOUSE
                   tbody
+              .tab-pane#chat_toggle2
+                include chat
+
           .col-md-5.col-lg-4.nosidemargin.rsNoDrag.chart
             .betchart
+            span.countertop
+              .text-center#nextRoundTitle Next Round
+              #nextRoundTime.text-center
           .col-md-3.col-lg-4.nosidemargin
             .row.summary
-              h4.summarysmall.golden.text-right YOUR CHANCE OF WINNING
+              h4.summarysmall.golden.text-right YOUR CHANCE<br>OF WINNING
               h1.summarybig.lightyellow.text-right.my_win_chance#my_win_chance
             // .row.summary
             //   h4.summarysmall.golden.text-right TAKE HOME AMOUNT
             //   h1.summarybig.lightyellow.text-right 0&period;00012500?
             .row.summary
               // TODO: Force this to be a float
-              h4.summarysmall.golden.text-right YOUR CONTRIBUTION
+              h4.summarysmall.golden.text-right YOUR<br>CONTRIBUTION
               h1.summarybig.lightyellow.text-right.my_contribution#my_contribution
-            // .row.netposition.loss
-            //   h4.summarysmall.golden POTENTIAL NET
-            //   h1.summarybig.lightyellow.text-right 34&period;0000
+             .row.netposition.loss
+               h4.summarysmall.golden POTENTIAL NET
+               h1.summarybig.lightyellow.text-right 34&period;0000
+          
+          
+          
+
         // Slide 2
         // .row
         //   .col-md-4.nosidemargin.table-responsive
@@ -155,19 +170,25 @@ html
     // Betting Navigation
     section.navbar-fixed-bottom.bitsplitbetnav
       .bigcounter
-        span.countertop
-          .text-center#nextRoundTitle Next Round
-          #nextRoundTime.text-center
+        
       .row
+        p#chat_toggle.text-left Chat
         .pull-left.clearfix.col-md-3.col-lg-3.bit.bitbank
+
+          //p.text-left User Name
+          //p.info.my_user_name.text-left
           a.my_user_name.welcome
+          p.text-left Password (
+            span#toggle-password-visibility(onclick="temp.toggle_password_visibility();") show
+            |)
+          p.info#password.invisible.text-left
+             
           br
-          // h2 &dollar;0&period;0002300
           h2.my_balance
           .btn-group.btn-group.btn-group-justified.btn-group-transparent
             a.btn.btn-default#withdraw Withdraw
             a.btn.btn-default#deposit Deposit
-        .col-md-6.col-lg-6.btcchance
+        .col-md-9.col-lg-9.btcchance
           // | Risk Chance Calculation
           // a  Learn about Smart API bidding
           | Place Your Bet By Percentage of Prize
@@ -187,14 +208,8 @@ html
             a.btn.btn-success(percentage="5") 5&percnt;
             a.btn.btn-success(percentage="1") 1&percnt;
             a.btn.btn-success(percentage="custom") Custom Bet
-        .col-md-3.bitbank#right_panel
-          h4.text-left User Name
-          h4.info.my_user_name.text-left
-          h4.text-left Password (
-            span#toggle-password-visibility(onclick="temp.toggle_password_visibility();") show
-            |)
-          h4.info#password.invisible.text-left
-          h4#chat_toggle.text-left Show Chat
+        
+          
     // FAQ Modal
     #howitworks.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
       .modal-dialog.modal-lg
@@ -286,6 +301,6 @@ html
     script(type='text/javascript', src='jquery.easing-1.3.js')
     // Main Slider Initiation Code
     script(type='text/javascript', src='chart.custom.js')
-    script(type='text/javascript', src='main.js')
+    script(type='text/javascript', src='/main.js')
     script(type='text/javascript', src='/socket.io/socket.io.js')
     include common_script
