--- a/public/views/index.html
+++ b/public/views/index.html
@@ -179,7 +179,7 @@
           </div>
           <div class="col-md-5 col-lg-4 nosidemargin rsNoDrag chart">
             <div class="betchart"></div><span class="countertop">
-              <div id="nextRoundTitle" class="text-center">Next Round</div>
+              <div id="nextRoundTitle" class="text-center">Bitcoins Splitting In</div>
               <div id="nextRoundTime" class="text-center"></div></span>
           </div>
           <div class="col-md-3 col-lg-4 nosidemargin">
