--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -92,7 +92,7 @@ html
           .col-md-5.col-lg-4.nosidemargin.rsNoDrag.chart
             .betchart
             span.countertop
-              .text-center#nextRoundTitle Next Round
+              .text-center#nextRoundTitle Bitcoins Splitting In
               #nextRoundTime.text-center
           .col-md-3.col-lg-4.nosidemargin
             .row.summary
