--- a/public/views/index.html
+++ b/public/views/index.html
@@ -40,7 +40,7 @@
         </ul>
       </div>
     </div>
-    <div id="sidebar" class="list-group"><a id="chat_toggle" href="#" class="list-group-item"><i class="fa fa-wechat fa-2x"></i><i class="chat-badge"></i></a><a id="account_show" href="#" class="list-group-item"><i class="fa fa-lock fa-2x"></i></a></div>
+    <div id="sidebar" class="list-group"><a id="account_show" href="#" class="list-group-item"><i class="fa fa-lock fa-2x"></i></a></div>
     <div class="overlay-solid"></div>
     <!-- Main Screen Slider-->
     <section id="gameslider">
@@ -52,7 +52,7 @@
             <ul id="myTab" style="margin-left:8%;" class="nav nav-pills">
               <li class="active"><a href="#home" data-toggle="pill">Current Participants</a></li>
               <li><a href="#profile" data-toggle="pill">Past Winners</a></li>
-              <li><a href="#chat_toggle2" data-toggle="pill">Chat</a></li>
+              <li><a href="#chat_toggle2" data-toggle="pill">Chat&nbsp;<i class="chat-badge"></i></a></li>
             </ul>
             <div class="tab-content">
               <div id="home" class="tab-pane active">
@@ -264,7 +264,6 @@
     <section class="navbar-fixed-bottom bitsplitbetnav">
       <div class="bigcounter"></div>
       <div class="row">
-        <p id="chat_toggle" class="text-left">Chat</p>
         <div class="pull-left clearfix col-md-3 col-lg-3 bit bitbank">
           <!--p.text-left User Name-->
           <!--p.info.my_user_name.text-left--><a class="my_user_name welcome"></a>
