--- a/public/views/sidebar.jade
+++ b/public/views/sidebar.jade
@@ -1,7 +1,7 @@
 div#sidebar.list-group
-  a#chat_toggle.list-group-item(href='#')
-    i.fa.fa-wechat.fa-2x
-    i.chat-badge
+  // a#chat_toggle.list-group-item(href='#')
+  //   i.fa.fa-wechat.fa-2x
+  //   i.chat-badge
   a#account_show.list-group-item(href='#')
     i.fa.fa-lock.fa-2x
 
