Commented out 'Potential Net', temporarily.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -197,10 +197,10 @@
               <h4 class="summarysmall golden text-right">YOUR<br>CONTRIBUTION</h4>
               <h1 id="my_contribution" class="summarybig lightyellow text-right my_contribution"></h1>
             </div>
-            <div class="row netposition loss">
-              <h4 class="summarysmall golden">POTENTIAL NET</h4>
-              <h1 class="summarybig lightyellow text-right">34&period;0000</h1>
-            </div>
+            <!-- <div class="row netposition loss"> -->
+            <!--   <h4 class="summarysmall golden">POTENTIAL NET</h4> -->
+            <!--   <h1 class="summarybig lightyellow text-right">34&period;0000</h1> -->
+            <!-- </div> -->
           </div>
         </div>
         <!-- Slide 2-->
