--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -110,13 +110,9 @@ html
               // TODO: Force this to be a float
               h4.summarysmall.golden.text-right YOUR<br>CONTRIBUTION
               h1.summarybig.lightyellow.text-right.my_contribution#my_contribution
-             .row.netposition.loss
-               h4.summarysmall.golden POTENTIAL NET
-               h1.summarybig.lightyellow.text-right 34&period;0000
-          
-          
-          
-
+             // .row.netposition.loss
+             //   h4.summarysmall.golden POTENTIAL NET
+             //   h1.summarybig.lightyellow.text-right 34&period;0000
         // Slide 2
         // .row
         //   .col-md-4.nosidemargin.table-responsive
