Now chat message count (in red) will reset when you go to look at it, and it will update only when you are not looking at it.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -52,7 +52,7 @@
             <ul id="myTab" style="margin-left:8%;" class="nav nav-pills">
               <li class="active"><a href="#home" data-toggle="pill">Current Participants</a></li>
               <li><a href="#profile" data-toggle="pill">Past Winners</a></li>
-              <li><a href="#chat_toggle2" data-toggle="pill">Chat&nbsp;<i class="chat-badge"></i></a></li>
+              <li><a id="chat_pill" href="#chat_toggle2" data-toggle="pill">Chat&nbsp;<i class="chat-badge"></i></a></li>
             </ul>
             <div class="tab-content">
               <div id="home" class="tab-pane active">
