--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -63,7 +63,7 @@ html
               li
                 a(href='#profile', data-toggle='pill') Past Winners
               li
-                a(href='#chat_toggle2', data-toggle='pill')
+                a(id="chat_pill" href='#chat_toggle2', data-toggle='pill')
                   | Chat&nbsp;
                   i.chat-badge
             .tab-content
