An experiment with "blank-slates".  When no one is playing there is a message.  When the user on the page isn't playing, the tagline will show up instead of your chance of winning.

--- a/public/views/common_script.jade
+++ b/public/views/common_script.jade
@@ -1,5 +1,15 @@
+#fb-root
 script.
-  var socket = io.connect("https://bitsplit.it:443");
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=843106485718946&version=v2.0";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+
+script.
+  var socket = io.connect(!{socket_address});
 
   socket.on("error", function (json) {
     alertify.error(json.msg, "", 3000);
@@ -27,7 +37,7 @@ script.
   });
   socket.on("chat_message", function (json) {
     add_message_to_chat(json.user_name, json.msg);
-  }); 
+  });
 
 script.
   /* Google Analytics */
