--- a/public/views/index.html
+++ b/public/views/index.html
@@ -40,7 +40,11 @@
         </ul>
       </div>
     </div>
-    <div id="sidebar" class="list-group"><a id="account_show" href="#" class="list-group-item"><i class="fa fa-lock fa-2x"></i></a></div>
+    <div id="sidebar" class="list-group">
+      <!-- a#chat_toggle.list-group-item(href='#')-->
+      <!--   i.fa.fa-wechat.fa-2x-->
+      <!--   i.chat-badge--><a id="account_show" href="#" class="list-group-item"><i class="fa fa-lock fa-2x"></i></a>
+    </div>
     <div class="overlay-solid"></div>
     <!-- Main Screen Slider-->
     <section id="gameslider">
@@ -200,10 +204,10 @@
               <h4 class="summarysmall golden text-right">YOUR<br>CONTRIBUTION</h4>
               <h1 id="my_contribution" class="summarybig lightyellow text-right my_contribution"></h1>
             </div>
-            <!-- <div class="row netposition loss"> -->
-            <!--   <h4 class="summarysmall golden">POTENTIAL NET</h4> -->
-            <!--   <h1 class="summarybig lightyellow text-right">34&period;0000</h1> -->
-            <!-- </div> -->
+            <!-- .row.netposition.loss
+            //   h4.summarysmall.golden POTENTIAL NET
+            //   h1.summarybig.lightyellow.text-right 34&period;0000
+            -->
           </div>
         </div>
         <!-- Slide 2-->
