--- a/public/views/common_script.jade
+++ b/public/views/common_script.jade
@@ -28,8 +28,12 @@ script.
   socket.on("round_new", function (json) {
       alertify.success("<b>New round starting!</b>");
   });
+
+  var audio  = new Audio('audio/chat.mp3');
   socket.on("chat_message", function (json) {
     add_message_to_chat(json.user_name, json.message);
+    audio.volume = volumeLevel;
+    audio.play();
   });
   socket.on("chat_history", function (json) {
     $.each(json.messages.reverse(), function(ii, message) {
