--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -16,6 +16,7 @@ html
     link(rel='stylesheet', href='skins/minimal-white/rs-minimal-white.css')
     link(rel='stylesheet', href='alertify.core.css')
     link(rel='stylesheet', href='alertify.bootstrap.css')
+    link(rel='stylesheet', href='jquery.nouislider.css')
     link(href='http://fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
   body
     // Background
@@ -309,6 +310,7 @@ html
     // Jquery Scripts
     script(type='text/javascript', src='jquery.royalslider.min.js')
     script(type='text/javascript', src='jquery.easing-1.3.js')
+    script(type='text/javascript', src='jquery.nouislider.min.js')
     // Main Slider Initiation Code
     script(type='text/javascript', src='chart.custom.js')
     script(type='text/javascript', src='/main.js')
